[project]
name = "wrap-print"
version = "0.1.3"
description = "A print tool that wraps text to a specified width."
readme = "README.md"
authors = [
    { name = "meebox", email = "meebox@gmail.com" }
]

# 這會變成你的套件的 Python 版本需求
requires-python = ">=3.3"
dependencies = [
    "twine>=1.15.0",
]

[project.scripts]
wrap-print = "wrap_print:main"

# 這些會出現在 PyPi 的頁面
[project.urls]
repository = "https://github.com/codemee/wrap_print"
homepage = "https://dev.to/codemee"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
